PhD Proposal - Monday 02 pre_eve

--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -23,64 +23,30 @@ Studies have both reported a global declining trend in marine primary production
 In order to answer questions of how phytoplankton will respond to a changing climate it is necessary to look the diverse phytoplankton community in greater detail. 
 
 \section{Characterizing phytoplankton}
-From the early days of oceanographic research, scientists have been interested in the microscopic organisms that were floating in samples of sea water. These communities contain many species each and in total there are tens of thousands of species of phytoplankton that inhabit the surface ocean \citep{Engelen2015}. All phytoplankton species use chlorophyll or bacteriochlorophyll to harvest light as the energy source to fix organic carbon, but there is wide variation in virtually all their other properties \citep{Litchman2008}. In addition to the complex community composition, there are many factors affecting measurements of their bulk properties in the ocean, such as the viral and bacterial community and the influence of diverse grazers, all within the complex three-dimensional physical environment that is the ocean. Where earlier phytoplankton ecologists focused on identifying individual species and decoding their phylogeny, recent research is trying to quantify the diversity on higher levels of organization and relating it to other properties of the ecosystem. The focus has shifted towards trait diversity both within and across species and within and across functional groups. In order to scientifically describe this perplexing diversity the concepts of trait-based ecology and functional types have been developed \citep{Tilman2001,McGill2006,Violle2007c}.
+From the early days of oceanographic research, scientists have been interested in the microscopic organisms that were floating in samples of sea water. These communities contain many species each and in total there are tens of thousands of species of phytoplankton that inhabit the surface ocean \citep{Engelen2015}. All phytoplankton species use chlorophyll or bacteriochlorophyll to harvest light as the energy source to fix organic carbon, but there is wide variation in virtually all their other properties \citep{Litchman2008}. In addition to the complex community composition, there are many factors affecting measurements of their bulk properties in the ocean, such as the viral and bacterial community and the influence of diverse grazers, all within the complex three-dimensional physical environment that is the ocean. 
+Where earlier phytoplankton ecologists focused on identifying individual species, decoding their phylogeny or growing them in controlled lab cultures, recent research is trying to integrate the insights gained from these approaches and quantify the diversity on higher levels of organization in relation to other properties of the ecosystem. The focus has shifted towards trait diversity both within and across species and within and across phytoplankton groups. In order to scientifically describe this perplexing diversity the concepts of trait-based ecology and functional types have been developed \citep{Tilman2001,McGill2006,Violle2007c}.
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\linewidth]{./Chp1-Intro/Fig_litchman2008.png}
+\caption[Scheme]{\small{"A typology of phytoplankton functional traits" from \cite{Litchman2008}}}
+\label{PhytoTraits}
+\end{figure}
 
 \subsection{Functional types and traits}
-In the following I will try to clarify the complementary terms of phytoplankton traits, functional traits, and functional groups. 
+In the following I will try to clarify the complementary terms of phytoplankton traits, functional traits, and functional types. 
 
-The trait-based approach to phytoplankton ecology has been growing in popularity. Part of the fascination evoked by this term stems from its origin in evolutionarily theory. Over the last three decades, it has been adopted by ecologists trying to understand communities and ecosystems. In this new context, the concept of traits has been stretched far beyond its original meaning, which can lead to some confusion surrounding the scope of trait-based methods \citep{Violle2007c}. In the simplest definition, a trait is a surrogate of organismal performance. In the ecological context this has been expanded to surrogates for the performance of populations, communities and entire ecosystems. This can include ecophysiological traits, life-history traits, demographic traits or response and effect traits of ecosystems. Theoretically, any property of an organism or ecosystem could be defined as a trait, but ideally a trait should be functional. Functional traits are defined by \cite{Violle2007c} as "morpho-, physio- or phenological traits which impact fitness indirectly via their effects on growth, reproduction and survival". 
+The trait-based approach to phytoplankton ecology has been growing in popularity. Part of the fascination evoked by this term stems from its origin in evolutionarily theory. Over the last three decades, it has been adopted by ecologists trying to understand communities and ecosystems. In this new context, the concept of traits has been stretched far beyond its original meaning, which can lead to some confusion surrounding the scope of trait-based methods \citep{Violle2007c}. In the simplest definition, a trait is a surrogate of organismal performance. In the ecological context this has been expanded to surrogates for the performance of populations, communities and entire ecosystems. This can include ecophysiological traits, life-history traits, demographic traits or response and effect traits of ecosystems (see Figure \ref{PhytoTraits} for a selection of phytoplankton traits). Theoretically, any property of an organism or ecosystem could be defined as a trait, but ideally a trait should be functional. Functional traits are defined by \cite{Violle2007c} as "morpho-, physio- or phenological traits which impact fitness indirectly via their effects on growth, reproduction and survival". An important facet of the trait-based approach is to describe organismal function via trade-offs between traits. For example when competing for multiple nutrients, phytoplankton species are thought to be constrained by trade-offs in their competitive ability for one over another resource \citep{Tilman1990}. 
 
-An important facet of the trait-based approach is to describe organismal function via trade-offs between traits. For example when competing for multiple nutrients, phytoplankton species are thought to be constrained by trade-offs in their competitive ability for one over another resource \citep{Tilman1990}. Phytoplankton are an extremely diverse and polyphyletic group of photosynthetic microorganisms, including protists and cyanobacteria, and scientists have been struggling to unify ecological concepts to produce general principles. The trait based approach lends itself to generalizations, as traits and ecological trade-offs can be defined and explored irrespective of species or taxa boundaries \citep{McGill2006}.
- 
-Major taxonomic groups of phytoplankton can be classified into functional groups, based on their biogeochemical roles within the ecosystem \citep{Iglesias-Rodriguez2002}. 
+Phytoplankton are extremely diverse and the trait based approach lends itself to generalizations, as traits and ecological trade-offs can be defined and explored irrespective of species or taxa boundaries \citep{McGill2006}. However, depending on study and hypotheses to be tested, it can be very helpful to structure the diversity of organisms into distinct groups. Major taxonomic groups of phytoplankton can be classified into groups, based on their ecological or biogeochemical roles within the ecosystem \citep{Iglesias-Rodriguez2002,Flynn2015}. The concept of functional groups is not in contrast to a trait-based ecology of phytoplankton, but can be complementary to it. By broadly sampling relevant traits across phytoplankton groups and species, functional types can be defined by functional traits and trade-offs and therefore extend the trait-based approach by another level of organization \citep{Litchman2007d}. An early example of such an approach is the work of Ramón Margalef. He used observations of important traits, such as sinking rates and nutrient utilization to build the concept called "Margalef's mandala" to organize phytoplankton functional types (PFTs) on a spectrum of nutrient availability versus turbulence \citep{Margalef1978}. 
 
-There is debate still how to define functional groups of phytoplankton \citep{Flynn2015}.
+The terms functional group and functional type are used interchangeably, with functional groups more often referring to the grouping of species and the functional type describing the group as a whole, often as implemented in computational models. In fact, the simplification of the phytoplankton community into functional types has been widely used for the design and interpretation of computational models that try to recreate or make predictions about the biogeochemical cycling, biogeographic distribution, productivity and other ecosystem functions of phytoplankton (XGregg 2003, Anderson 2005 and LeQuere 2005X). Biogeochemically defined functional types are most often used, as these functional traits can usually be well defined within an ecosystem model. Typical examples of such functional groups are silicifers, which broadly correspond the phylogenetic group of diatoms, and calcifiers, which are usually represented by coccolithophores. Such functional types are always simplifications of the natural pyhtoplankton diversity. Silicoflagellates create silicified skeletons like diatoms, but are often not explicitly included because they rarely dominate modern phytoplankton assemblages. The choice of which functional groups to include in a model can also be driven by biogeography or analytical considerations concerning the measurement instrumentation used for a particular study \citep{IrwinAndrewJ.Finkel2017b}. 
 
-
-XX
-
-
-
-\citep{IrwinAndrewJ.Finkel2017b}
-
-
-"Moreover, major taxonomic groups of eukaryotic phyto- plankton can be classified into distinct functional groups (Iglesias-Rodriguez et al. 2002a) with unique biogeochemical signatures. Here, we combine the trait-based approach with the taxonomic sLASh phylogenetic information by broadly sam- pling relevant traits across major taxonomic groups of marine phytoplankton to gain new insights into the effects of evolutionary history on the physiological trait distribu- tions and community structure. An important aspect of a trait-based approach to
-"community ecology is the trade-offs between traits (Tilman 1990; Grover 1991; Bohannan et al. 2002). When compe- tition for multiple resources is considered, species are thought to have trade-offs in their competitive ability for one vs. another nutrient (Tilman 1982) or for nutrient vs. light (Huisman \& Weissing 1994; Leibold 1997; Klausmeier \& Litchman 2001). Under non-equilibrium conditions, a trade-off between competitive ability and maximum growth rate may
-Litchman, E., Klausmeier, C. A., Schofield, O. M., \& Falkowski, P. G. (2007). The role of functional traits and trade-offs in structuring phytoplankton communities: Scaling from cellular to ecosystem level. Ecology Letters, 10(12), 1170–1181. https:doi.org10.1111j.1461-0248.2007.01117.x
-
-
-"Functional types can be composed of a large number of species with very different trait values, so the representation of a type by an average trait value may not be appropriate." (Irwin and Finkel 2018)
-XXX
-
-"Phytoplankton can be characterised by many morphological, physiological, behavioural and life history traits and trade-offs \citep{Litchman2008, Litchman2010}.
-
-"Studies on the phytoplankton community composition and their response to the environmental gradients are not novel. Ramón Margalef was probably one of the first ecologist to give an important momentum to the topic.  \citep{Margalef1978} used observations of key traits, such as nutrient utilization and sinking rates, to support his well known concept called "Margalef's mandala". His classification of phytoplankton functional types (PFTs) at different nutrient and turbulent environmental conditions represents an excellent first example of how the trait-based notion can be applied to better understand phytoplankton community ecology, therefore setting up the stage for further developments in the field.
-
-We have incredibly diverse Phytoplankton, and want to analyze traits and model -> need to simplify somehow => Functional Types
-
-so I want to talk about:
-that phytoplankton can be divided in functional groups
-talk about the Work that Finkel and Irwin have done! 
-question whether it makes sense to use functional types instead of species, …
-Thus, photopigment-based measures offer an efficient way to quantify community or functional diversity (X Moreno et al., 2012 X). (From Pinckney et al 2015)
-
-
-
-XXXX
-
-
-XXXX
-
-
-XXXX
-
+Perhaps small paragraph about functional diversity here?
+It is important to keep in mind that PFTs are often composed of many species with a possibly large variance in trait values. Recent research is trying to understand the effects of diversity within functional types and within species \citep{Violle2012,Violle2017a,DesRoches2018}.
 
 \section{Modeling phytoplankton communities}
-Going into the details is necessary to understand the whole picture
-
-One tool of integration are mathematical models
-
-Given the complexity of the ocean ecosystem, it is necessary to aggregate our knowledge of the many smaller parts into comprehensive ecological models in order to understand the full-scale implications. 
+Given the complexity of the ocean ecosystem, it is necessary to aggregate our knowledge of the many smaller parts into comprehensive ecological models in order to test mechanistic hypotheses and understand the full-scale implications. 
 
 Computational models of phytoplankton growth have been developed since the 1970s and have greatly increased in sophistication and complexity since then, co-evolving with the rise in computational resources. Ecosystem modelling started with simple box-model descriptions of a few trophic levels. These were the nutrient-phytoplankton-zooplankton (NPZ) and nutrient-phytoplankton-zooplankton-detritus (NPZD) models, which succeeded in reproducing the basic bloom dynamics observed in the temperate ocean (Evans 1988, Fasham et al. 1990). However, in their generalistic approach, these models unavoidably limit the characterization of a diverse phytoplankton community (Bruggeman 2009). To make up for this shortcoming, in the following two decades, these models were expanded to more complex plankton functional type (PFT) models (Le Quere et al. 2005). 
 
@@ -98,13 +64,6 @@ A simple example of a trait-based description of phytoplankton succession is sca
 "Michaelis Menten kinetics are really outdated.. and i suppose using them in a trait-based modelling approach is questionable just the same
 "plankton ecosystems are typically highly aggregated, a single variable gives the response of an incredibly diverse assemblage of phytoplankton species (P. Franks, 2009)
 
-
-\begin{figure}
-\centering
-\includegraphics[width=0.7\linewidth]{./Chp1-Intro/Fig_litchman2008.png}
-\caption[Scheme]{\small{Phytoplankton functional traits. Taken from \citet{Litchman2008}}}
-\label{phytotrait}
-\end{figure}
 
 XXX
 
