--- a/PhDProposal 01/Chp2-Pre/PreResults2.tex
+++ b/PhDProposal 01/Chp2-Pre/PreResults2.tex
@@ -12,9 +12,11 @@ Something about identifying and modeling regime shifts
 Talk about the data again
 
 This will be a first! first proper ecological model apart from this Export Flux model only including diatoms \citep{Walsh2002a}
+Also talk about mutshinda et al studies!
 
 
 FUNCTIONAL TYPES STRUCTURE --> explain linkage between Pigment Data that I use and functional diversity measurements (XMoreno et al. 2012X) take this from Pinckney et al. 2015...
+Thus, photopigment-based measures offer an efficient way to quantify community or functional diversity (X Moreno et al., 2012 X). (From Pinckney et al 2015)
 
 Interesting thing is that there was this shift in the PhytoplanktonCommunity but apparently no real reduction in Export! (This is in Taylor and Pinckney somehwere)
 bb
