--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,101 @@
+@article{DesRoches2018,
+abstract = {Human activity is causing wild populations to experience rapid trait change and local extirpation. The resulting effects on intraspecific variation could have substantial consequences for ecological processes and ecosystem services. Although researchers have long acknowledged that variation among species influences the surrounding environment, only recently has evidence accumulated for the ecological importance of variation within species. We conducted a meta-analysis comparing the ecological effects of variation within a species (intraspecific effects) with the effects of replacement or removal of that species (species effects). We evaluated direct and indirect ecological responses, including changes in abundance (or biomass), rates of ecological processes and changes in community composition. Our results show that intraspecific effects are often comparable to, and sometimes stronger than, species effects. Species effects tend to be larger for direct ecological responses (for example, through consumption), whereas intraspecific effects and species effects tend to be similar for indirect responses (for example, through trophic cascades). Intraspecific effects are especially strong when indirect interactions alter community composition. Our results summarize data from the first generation of studies examining the relative ecological effects of intraspecific variation. Our conclusions can help inform the design of future experiments and the formulation of strategies to quantify and conserve biodiversity.},
+author = {{Des Roches}, Simone and Post, David M. and Turley, Nash E. and Bailey, Joseph K. and Hendry, Andrew P. and Kinnison, Michael T. and Schweitzer, Jennifer A. and Palkovacs, Eric P.},
+doi = {10.1038/s41559-017-0402-5},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Des Roches et al. - 2018 - The ecological importance of intraspecific variation(2).pdf:pdf},
+isbn = {2397-334X (Electronic) 2397-334X (Linking)},
+issn = {2397334X},
+journal = {Nature Ecology and Evolution},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs,PhD Proposal BibTex/cited},
+number = {1},
+pages = {57--64},
+pmid = {29203921},
+publisher = {Springer US},
+title = {{The ecological importance of intraspecific variation}},
+url = {http://dx.doi.org/10.1038/s41559-017-0402-5},
+volume = {2},
+year = {2018}
+}
+
+
+@article{Violle2017a,
+abstract = {Rarity has been a central topic for conservation and evolutionary biologists aiming to determine the species characteristics that cause extinction risk. More recently, beyond the rarity of species, the rarity of functions or functional traits, called functional rarity, has gained momentum in helping to understand the impact of biodiversity decline on ecosystem functioning. However, a conceptual framework for defining and quantifying functional rarity is still lacking. We introduce 12 different forms of functional rarity along gradients of species scarcity and trait distinctiveness. We then highlight the potential key role of functional rarity in the long-term and large-scale maintenance of ecosystem processes, as well as the necessary linkage between functional and evolutionary rarity.},
+author = {Violle, Cyrille and Thuiller, Wilfried and Mouquet, Nicolas and Munoz, Fran{\c{c}}ois and Kraft, Nathan J.B. and Cadotte, Marc W. and Livingstone, Stuart W. and Mouillot, David},
+doi = {10.1016/j.tree.2017.02.002},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Violle et al. - 2017 - Functional Rarity The Ecology of Outliers.pdf:pdf},
+isbn = {0169-5347},
+issn = {01695347},
+journal = {Trends in Ecology and Evolution},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs/BEF stuff},
+number = {5},
+pages = {356--367},
+pmid = {28389103},
+publisher = {Elsevier Ltd},
+title = {{Functional Rarity: The Ecology of Outliers}},
+url = {http://dx.doi.org/10.1016/j.tree.2017.02.002},
+volume = {32},
+year = {2017}
+}
+
+
+@article{Violle2012,
+abstract = {Despite being recognized as a promoter of diversity and a condition for local coexistence decades ago, the importance of intraspecific variance has been neglected over time in community ecology. Recently, there has been a new emphasis on intraspecific variability. Indeed, recent developments in trait-based community ecology have underlined the need to integrate variation at both the intraspecific as well as interspecific level. We introduce new T-statistics ('T' for trait), based on the comparison of intraspecific and interspecific variances of functional traits across organizational levels, to operationally incorporate intraspecific variability into community ecology theory. We show that a focus on the distribution of traits at local and regional scales combined with original analytical tools can provide unique insights into the primary forces structuring communities. {\textcopyright} 2011 Elsevier Ltd.},
+author = {Violle, Cyrille and Enquist, Brian J. and McGill, Brian J. and Jiang, Lin and Albert, C{\'{e}}cile H. and Hulshof, Catherine and Jung, Vincent and Messier, Julie},
+doi = {10.1016/j.tree.2011.11.014},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Violle et al. - 2012 - The return of the variance Intraspecific variability in community ecology.pdf:pdf},
+isbn = {0169-5347 (Print) 0169-5347 (Linking)},
+issn = {01695347},
+journal = {Trends in Ecology and Evolution},
+keywords = {Community assembly,Functional trait,Intraspecific variation,Mean field approach,Species coexistence,Species diversity,T-statistics,Variance},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs/GeneralTraitStuff,PhD Proposal BibTex/cited},
+number = {4},
+pages = {244--252},
+pmid = {22244797},
+title = {{The return of the variance: Intraspecific variability in community ecology}},
+volume = {27},
+year = {2012}
+}
+
+
+@article{Margalef1978,
+annote = {interesting ideas, about the importance of external energy in phytoplankton diversity
+
+I.e. turbulence!
+
+otherwise, not of specific interest to me},
+author = {Margalef, Ramon},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Gilioli, Silva - 2000 - Frequency of parasites and Salmonella infection in captive maned-wolf, Chrysocyon brachyurus, kept in Zoos at t.pdf:pdf},
+issn = {0399-1784},
+journal = {Oceanologica acta},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs/old phytoplankton stuff},
+number = {4},
+pages = {493--509},
+publisher = {Gauthier-Villars},
+title = {{Life-forms of phytoplankton as survival alternatives in an unstable environment}},
+volume = {1},
+year = {1978}
+}
+
+
+@article{Litchman2007d,
+abstract = {Trait-based approaches to community structure are increasingly used in terrestrial ecology. We show that such an approach, augmented by a mechanistic analysis of trade-offs among functional traits, can be successfully used to explain community composition of marine phytoplankton along environmental gradients. Our analysis of literature on major functional traits in phytoplankton, such as parameters of nutrient-dependent growth and uptake, reveals physiological trade-offs in species abilities to acquire and utilize resources. These trade-offs, arising from fundamental relations such as cellular scaling laws and enzyme kinetics, define contrasting ecological strategies of nutrient acquisition. Major groups of marine eukaryotic phytoplankton have adopted distinct strategies with associated traits. These diverse strategies of nutrient utilization can explain the distribution patterns of major functional groups and size classes along nutrient availability gradients.},
+author = {Litchman, Elena and Klausmeier, Christopher A. and Schofield, Oscar M. and Falkowski, Paul G.},
+doi = {10.1111/j.1461-0248.2007.01117.x},
+file = {:Users/bpo/Library/Application Support/Mendeley Desktop/Downloaded/Litchman et al. - 2007 - The role of functional traits and trade-offs in structuring phytoplankton communities Scaling from cellular to.pdf:pdf},
+isbn = {1461-0248 (Electronic)$\backslash$n1461-023X (Linking)},
+issn = {1461023X},
+journal = {Ecology Letters},
+keywords = {Coccolithophores,Competition,Diatoms,Dinoflagellates,Ecological strategies,Minimum nutrient quota,Nutrient uptake,Prasinophytes,Scaling laws},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs/GeneralTraitStuff,CARIACO/Model Params,DAAD app,PhD Proposal BibTex/not yet cited,PhD Proposal BibTex/cited},
+number = {12},
+pages = {1170--1181},
+pmid = {17927770},
+title = {{The role of functional traits and trade-offs in structuring phytoplankton communities: Scaling from cellular to ecosystem level}},
+volume = {10},
+year = {2007}
+}
+
+
 @article{Flynn2015,
 author = {Flynn, Kevin J and {St John}, Michael and Raven, John A and Skibinski, David O F and Allen, J Icarus and Mitra, Aditee and Hofmann, Eileen E},
 file = {:Users/bp/Documents/Mendeley Desktop/fbv036.pdf:pdf},
